Fixed overlapping outside border

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
     min-height: 100vh;
     text-align: center;
     border: white solid 2px;
-    border-radius: 3rem;
+    border-radius: 1.3rem;
     padding: 1%;
 }
 li {
@@ -26,7 +26,7 @@ li {
     padding: 4px;
     font-size: 1.3rem;
     text-align: left;
-    margin-bottom: -1px;
+    margin-top: -1px;
 }
 
 
